httpGoServer/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: go_service }
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: "127.0.0.1:9000"   # PAS de "http://"
                          cluster: ext_auth
                          timeout: 0.5s
                        path_prefix: "/auth"
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: "authorization"
                  - name: envoy.filters.http.router

  clusters:
    - name: go_service
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: go_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

    - name: ext_auth
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: ext_auth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
