httpGoServer/envoy/envoy_withoutAuth.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: go_service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: go_service
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: go_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
